# transformer-learning

./: classification.py  dataset.json  dialogue_dataset.json  pipeline.py  pyproject.toml  requirements.txt  validation_dataset.json
logs/: events.out.tfevents.1745573459.Mac-mini-2.local.28571.0
model/: sequences.py
token/: tokenization.py  transformer_concepts_detailed.py
train/: chat_model.py  fine_tuning.py  train.py  train_me.py  use_pretrained_translator.py
